syntax = "proto2";

package capsuleDBSerialization;

message kvs_payload{
    optional string key = 1;
    optional string value = 2;
    optional int64 txn_timestamp = 3;
    optional string txn_msgType = 4;
  }